--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
+    <!--需要更改，直接 copy 淘宝-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>会动的简历</title>
+    <title>一个八卦图</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,9 +15,10 @@
     <style id="style"></style>
     <div id="html"></div>
     <div id="div1Wrapper">
-        <div id="div1"> </div>
+        <div id="div1"></div>
     </div>
     <script src="main.js"></script>
+    <!--用于嵌入或引用可执行脚本-->
 </body>
 
 </html>
